[gd_scene load_steps=5 format=3 uid="uid://bakmfkghmvn1t"]

[ext_resource type="Script" path="res://UIObjects/MessageUI/OnScreenMessageMaster.gd" id="1_id3w6"]
[ext_resource type="PackedScene" uid="uid://b58jmry2qtrlm" path="res://UIObjects/MessageUI/HintControl/HintControl.tscn" id="2_7pqnw"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_tr4pa"]
[ext_resource type="PackedScene" uid="uid://dwi8ddsnsdbuk" path="res://UIObjects/MessageUI/HoldUseDisplay/HoldUseHUDControl.tscn" id="4_bejfb"]

[node name="OnScreenMessageMaster" type="Node"]
script = ExtResource("1_id3w6")

[node name="DisplayTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="HintControl" parent="CanvasLayer" instance=ExtResource("2_7pqnw")]
visible = false
anchors_preset = -1
offset_top = 150.0

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("2_tr4pa")
theme_override_font_sizes/font_size = 28
text = "This is a message"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoldUseHUDControl" parent="CanvasLayer" instance=ExtResource("4_bejfb")]
visible = false

[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_time_timeout"]
